--- a/restaurant.html
+++ b/restaurant.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
@@ -35,8 +36,10 @@
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
       <h1 id="restaurant-name"></h1>
-      <img id="restaurant-img">
-      <p id="restaurant-cuisine"></p>
+      <div id="image-cuisine-container">
+        <img id="restaurant-img">
+        <p id="restaurant-cuisine"></p>
+      </div>
       <p id="restaurant-address"></p>
       <table id="restaurant-hours"></table>
     </section>
@@ -46,6 +49,7 @@
       <ul id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
+    <div class="clear"></div>
   </main>
   <!-- End main -->
 
@@ -61,7 +65,7 @@
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBh4Cu5A_SJldjPwPVN1BH8GpQ_EsWX4M&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
 
 </body>
