--- a/restaurant.html
+++ b/restaurant.html
@@ -35,13 +35,13 @@
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h2 id="restaurant-name"></h2>
+      <h2 id="restaurant-name" tabindex="0"></h2>
       <div id="image-cuisine-container">
         <img id="restaurant-img">
         <p id="restaurant-cuisine"></p>
       </div>
-      <p id="restaurant-address"></p>
-      <table id="restaurant-hours"></table>
+      <p id="restaurant-address" tabindex="0"></p>
+      <table id="restaurant-hours" tabindex="0"></table>
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
